<resources>
    
    <string name="hello_file_explore">Hello World, FileExplore!</string>
    <string name="file_explore_title">File Explore</string>

    <string name="app_name">Accounts</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_accounts_overview">Accounts</string>
    <string name="title_activity_edit_accounts">New/Edit account</string>
    <string name="title_activity_account_detail">Account</string>
    <string name="title_activity_edit_transaction">New/Edit transaction</string>
    <string name="title_activity_types">Manage types</string>
    <string name="title_activity_edit_type">New/Edit type</string>
    <string name="title_activity_filter">Set a filter</string>
    <string name="title_activity_save">Save/ restore accounts</string>
    <string name="color_picker_title">Pick a color</string>
    <string name="title_coin_detect">Coins recognition</string>
    <string name="title_activity_graph">Graph</string>
    
    
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="icon">Icon</string>
    <string name="interval">interval</string>
    
    
    <string name="menu_overview">Accounts overview</string>
    <string name="menu_manage_types">Manage types</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_save_restore">Save/restore accounts</string>
    <string name="menu_save_coin_detect">Coins recognition</string>
    <string name="menu_see_tooltips">Display tooltips</string>
    
    
    
    <string name="no_transaction">There isn\'t any transaction to display for this filter.</string>
    <string name="no_account">Here are a few steps to use Accounts :\n1. Create some types and accounts to manage your transactions.\n2. Add transactions in your accounts. \n3. Generate the graphics with the collected data (in construction) !</string>
    
    <string name="edit_account_name">Account name</string>
    <string name="edit_account_confirm">Save</string>
    <string name="edit_account_delete">Delete</string>
    <string name="edit_account_delete_question">Delete this account ?</string>
    <string name="edit_account_yes">Yes</string>
    <string name="edit_account_no">No</string>
    
    <string name="edit_type_name">Type name</string>
    <string name="edit_type_color">Set color</string>
    <string name="edit_type_confirm">Save</string>
    <string name="edit_type_delete">Delete</string>
    <string name="edit_type_delete_question">Delete this type ?</string>
    
    
    <string name="edit_transaction_name">Transaction name</string>
    <string name="edit_transaction_amount_label">Amount :</string>
    <string name="edit_transaction_amount">0.0</string>
    <string name="edit_transaction_type_label">Type :</string>
    <string name="edit_transaction_description">Description (optional)</string>
    <string name="edit_transaction_date_label">Date :</string>
    <string name="edit_transaction_name_toast">Please enter a name</string>
    <string name="edit_transaction_amount_toast">Please enter a valid amount</string>
    <string name="edit_transaction_credit">Credit</string>
    <string name="edit_transaction_debit">Debit</string>
    <string name="edit_transaction_confirm">Save</string>
    <string name="edit_transaction_delete">Delete</string>
    <string name="edit_transaction_delete_question">Delete this transaction ?</string>
    <string name="edit_transaction_yes">Yes</string>
    <string name="edit_transaction_no">No</string>
    
    <string name="account_overview_add_test">Add test data</string>
    <string name="account_overview_delete">Delete</string>
    <string name="account_overview_edit">Edit</string>
    <string name="activity_overview_add_footer">Add an account</string>
    <string name="activity_overview_default_types_question">Do you want to load the default types ?</string>
    <string name="activity_overview_default_types_yes">Yes</string>
    <string name="activity_overview_default_types_no">No</string>
    
    
    <string name="activity_save_title_save">Save</string>
    <string name="activity_save_text_save">Select an account to save :</string>
    <string name="activity_save_text_location_save">Location :</string>
    <string name="activity_save_button_choose_location">Browse...</string>
    <string name="activity_save_button_save">Save</string>
    <string name="activity_save_title_restore">Restore</string>
    <string name="activity_save_text_restore">Select a file to restore :</string>
    <string name="activity_save_button_preview">Preview</string>
    <string name="activity_save_button_restore">Restore</string>
    <string name="activity_save_change_name">This account already exits, type an other name (cancel will ignore this account) :</string>
    
    <string name="dialog_file_select">Select</string>
    <string name="dialog_file_cancel">Cancel</string>
    
    
    
    <string name="activity_detail_add_footer">Add a transaction</string>
    <string name="activity_detail_edit">Edit</string>
    <string name="activity_detail_delete">Delete</string>
    <string name="activity_detail_transfer">Transfer to an other account</string>
    <string name="activity_detail_transfer_question">Select a target account :</string>
    <string name="activity_detail_transfer_confirm">Transfer this transaction(s) ?</string>
    <string name="activity_detail_change_type_question">Select a target type :</string>
    <string name="activity_detail_change_type_confirm">Change the type of this transactions ?</string>
    <string name="activity_detail_total_footer">Total</string>
    <string name="activity_detail_delete_question">Delete this transaction ?</string>
    
    
    <string name="activity_filter_cancel">Cancel</string>
    <string name="activity_filter_confirm">Confirm</string>
    <string name="activity_filter_date_box">Date filter</string>
    <string name="activity_filter_type_box">Type filter</string>
    <string name="activity_filter_bound1_label">From</string>
    <string name="activity_filter_bound2_label">to</string>
    <string name="activity_filter_interval">Choose a selection interval : </string>
    
    
    <string name="coin_detect_button_start">Start coins recognition</string>
    <string name="coin_detect_button_quit">Quit</string>
    <string name="coin_detect_button_settings_on">Hide settings</string>
    <string name="coin_detect_button_settings_off">Show settings</string>
    <string name="coin_detect_biggest_value_text">Enter the value of the biggest coin :</string>
    <string name="coin_detect_torch_text">Torch :</string>    
    
    
    
    
    <string name="confirm_dialog_yes">Yes</string>
    <string name="confirm_dialog_no">No</string>
    <string name="confirm_dialog_confirm">Enter</string>
    <string name="confirm_dialog_cancel">Cancel</string>
    
    

    <string name="menu_add">ADD</string>
    <string name="menu_filter">FILTER</string>
    <string name="menu_types">TYPES</string>
    
    <string name="action_manage_types">Manage types</string>
    <string name="action_add_account">Add account</string>
    
    <string name="action_add_trans">Add transaction</string>
    <string name="action_set_filter">Set filter</string>
    
    <string name="action_add_type">Add type</string>
    
    <string name="action_change_type">Change type</string>
    <string name="action_transfer_trans">Transfer</string>
    <string name="action_graph">Graph</string>
    <string name="action_help">Help</string>
    
</resources>