<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		
        <TextView
            android:id="@+id/activity_save_title_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_save_title_save" 
            android:textSize="20dp">
        </TextView>
        
        <TextView
            android:id="@+id/activity_save_text_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_save_text_save" >
        </TextView>

        <Spinner
            android:id="@+id/activity_save_spinner_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/activity_save_text_location_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_save_text_location_save" >
        </TextView>
        
        <Button
            android:id="@+id/activity_save_button_choose_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_save_button_choose_location" >
        </Button>

        <Button
            android:id="@+id/activity_save_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_save_button_save" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		
        <TextView
            android:id="@+id/activity_save_title_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_save_title_restore" 
            android:textSize="20dp">
        </TextView>
        
        <TextView
            android:id="@+id/activity_save_text_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_save_text_restore" >
        </TextView>

        <EditText
            android:id="@+id/edit_account_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_account_name"
            android:imeOptions="actionNext" >
        </EditText>

        <Button
            android:id="@+id/activity_save_button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_save_button_restore" >
        </Button>
    </LinearLayout>

</LinearLayout>