<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseLayout" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/activity_menu_title"
                style="@style/MenuTitle"
                android:text="@string/title_activity_accounts_overview" >
            </TextView>

            <Button
                android:id="@+id/activity_menu_button_overview"
                style="@style/MenuButton"
                android:layout_below="@+id/activity_menu_title"
                android:text="@string/menu_overview" />

            <Button
                android:id="@+id/activity_menu_button_types"
                style="@style/MenuButton"
                android:layout_below="@+id/activity_menu_button_overview"
                android:text="@string/menu_manage_types" />

            <Button
                android:id="@+id/activity_menu_button_save"
                style="@style/MenuButton"
                android:layout_below="@+id/activity_menu_button_types"
                android:text="@string/menu_save_restore" />

            <Button
                android:id="@+id/activity_menu_button_coin_detect"
                style="@style/MenuButtonNew"
                android:layout_below="@+id/activity_menu_button_save"
                android:text="@string/menu_save_coin_detect" />

            <Button
                android:id="@+id/activity_menu_button_quit"
                style="@style/MenuButton"
                android:layout_below="@+id/activity_menu_button_coin_detect"
                android:text="@string/menu_quit" />
            
            <Button
                android:id="@+id/activity_menu_button_tooltips"
                style="@style/TooltipsButton"
                android:layout_below="@+id/activity_menu_button_quit"
                android:text="@string/menu_see_tooltips" />
        </RelativeLayout>
    </ScrollView>

    <com.haarman.supertooltips.ToolTipRelativeLayout
        android:id="@+id/activity_menu_tooltiplayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>