<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_type_name"
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_type_name" >
        </EditText>

        <Button
            android:id="@+id/edit_type_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_type_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <Button
                android:id="@+id/edit_type_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/edit_type_confirm" >
            </Button>

            <Button
                android:id="@+id/edit_type_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/edit_type_delete" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <com.haarman.supertooltips.ToolTipRelativeLayout
        android:id="@+id/activity_edit_type_tooltiplayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>