<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseLayout" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <!-- name and amount -->

        <EditText
            android:id="@+id/edit_transaction_name"
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:hint="@string/edit_transaction_name" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                style="@style/TextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="40"
                android:text="@string/edit_transaction_amount_label" />

            <EditText
                android:id="@+id/edit_transaction_amount"
                style="@style/TextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:digits="-0123456789."
                android:gravity="right"
                android:hint="@string/edit_transaction_amount"
                android:inputType="numberSigned|numberDecimal" >
            </EditText>

            <RadioGroup
                android:id="@+id/edit_transaction_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="30"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/edit_transaction_credit"
                    style="@style/TextItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_transaction_credit" />

                <RadioButton
                    android:id="@+id/edit_transaction_debit"
                    style="@style/TextItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_transaction_debit" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#999999" />

        <!-- type -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                style="@style/TextInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="30"
                android:gravity="center|left"
                android:text="@string/edit_transaction_type_label" />

            <Spinner
                android:id="@+id/edit_transaction_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="70" />
        </LinearLayout>

        <!-- date -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/edit_transaction_date_label"
                style="@style/TextInput"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="30"
                android:gravity="center|left"
                android:text="@string/edit_transaction_date_label" >
            </TextView>

            <Button
                android:id="@+id/edit_transaction_date_button"
                style="@style/TextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="70" />
        </LinearLayout>

        <!-- description -->

        <EditText
            android:id="@+id/edit_transaction_description"
            style="@style/TextInputSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:gravity="top|left"
            android:hint="@string/edit_transaction_description"
            android:inputType="textMultiLine"
            android:lines="2" >
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#999999" />

        <!-- buttons -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/edit_transaction_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/edit_transaction_confirm" >
            </Button>

            <Button
                android:id="@+id/edit_transaction_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/edit_transaction_delete" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>