<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout"
    android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/activity_detail_footer" >
    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:gravity="center"
        android:text="@string/no_transaction"
        android:textColor="#999999"
        android:textSize="20sp" >
    </TextView>

    <LinearLayout
        android:id="@+id/activity_detail_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="#222222" >

        <ImageButton
            android:id="@+id/activity_detail_previous"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_action_previous_item" />

        <Spinner
            android:id="@+id/activity_detail_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:entries="@array/time_filter"
            android:gravity="center" />

        <TextView
            android:id="@+id/activity_detail_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:lines="1"
            android:text="@string/interval" />

        <ImageButton
            android:id="@+id/activity_detail_next"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_action_next_item" />
    </LinearLayout>

</RelativeLayout>