<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/activity_filter_date_box"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:checked="false"
                android:text="@string/activity_filter_date_box" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/activity_filter_interval_label"
                        style="@style/TextItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_filter_interval" />

                    <Spinner
                        android:id="@+id/activity_filter_interval_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_filter_interval_label"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:entries="@array/time_filter"
                        android:gravity="center"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/activity_filter_bound1_label"
                        style="@style/TextItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_filter_bound1_label" />

                    <Button
                        android:id="@+id/activity_filter_bound1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:id="@+id/activity_filter_bound2_label"
                        style="@style/TextItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/activity_filter_bound2_label" />

                    <Button
                        android:id="@+id/activity_filter_bound2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>
            </LinearLayout>

            <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#999999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/activity_filter_type_box"
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:checked="false"
                    android:text="@string/activity_filter_type_box" />

                <LinearLayout
                    android:id="@+id/activity_filter_checkbox_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#999999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/activity_filter_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/activity_filter_confirm" >
                </Button>

                <Button
                    android:id="@+id/activity_filter_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/activity_filter_cancel" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.haarman.supertooltips.ToolTipRelativeLayout
        android:id="@+id/activity_filter_tooltiplayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>